src/styles/index.css
/* ... */
@media screen and (max-width: 1200px) {
    .article {
        width: 100%;
        margin: 0 auto;
        padding-top: 60px;
        padding-bottom: 10px;
    }

    .headpic {
        display: none;
    }

    .headpic-cover {
        display: none;
    }
    .left-holder {
        width: 96%;
        margin: 0 2%;
        clear: both;
    }

    .result-box {
        width: 96%;
        margin: 0 2%;
        clear: both;
    }

    .right-holder {
        width: 96%;
        margin: 0 2%;
        clear: both;
    }

    #article-holder {
        width: 100%;
    }

    .button-prev {
        top: 50%;
        left: 15px;
    }

    .button-next {
        top: 50%;
        right: 15px;
    }

    .article-box {
        width: 98%;
        height: auto;
        margin: 8px 1%;
    }
    .choosen-box {
        width:25px;
        height:32px;
        background-color:rgb(180, 180, 180);
        margin: 0 auto;
        float:left;
        text-align:center;
        font-size:20px;
        border-radius: 4px;
        box-shadow: 0 0 10px rgba(184, 197, 214, .5);
        -moz-box-shadow: 0 0 10px rgba(184, 197, 214, .5);
        overflow: hidden;
        transition: all 0.6s;
    }
    .choosen-box:hover {
        box-shadow: 0 0 10px #767676;
        transform: scale(1.15); 
    }

    .ab-content {
        width: 100%;
        margin: 0;
        padding-bottom: 10px;
    }

    .article-title {
        width: 94%;
        height: 40px;
        line-height: 40px;
        margin-left: 3%;
    }

    .article-title a {
        width: 100%;
        float: left;
        font-size: 18px;
    }

    .article-cate {
        width: 96%;
        margin: 2px 2%;
    }

    .article-cate a {
        font-size: 13px;
    }

    .article-img-box {
        display: none;
        /* float: left;
        width: 100%;
        height: auto;
        margin: 10px 0 0 2%;
        overflow: hidden; */
    }

    .article-detail-box {
        display: none;
        /* width: 94%;
        height: 75px;
        margin: 8px 3%;
        line-height: 25px;
        -webkit-line-clamp: 3; */
    }

    .article-tail-box {
        float: left;
        height: 30px;
        width: 98%;
        line-height: 30px;
        margin: 5px 1%;
    }

    .column-container {
        width: 98%;
        margin: 6px 1%;
        font-size: 14px;
    }

    .column-container a {
        font-size: 14px;
    }

    .column-container-wider {
        width: 98%;
        margin: 6px 1%;
        font-size: 14px;
    }

    .column-container-wider a {
        font-size: 14px;
    }

    .column_box .column-title {
        height: 45px;
        line-height: 45px;
    }

    .column_box .column-category {
        height: 45px;
        line-height: 45px;
    }

    #pagination {
        text-align: center;
    }
}

/*@media (max-width: 768px) {*/

/*}*/

/*@media (max-width: 576px) {*/

/*}*/












[data-theme="dark"] .big-container {
width: 98%;
    margin: 0 auto;
    min-height: 570px;
    z-index:10;
    position: relative;
    border-radius: 10px;
    border-width: 3px;
    border-color: rgba(0, 0, 0, 0.616);
    border-style: dashed;
    background-color: var(--bg-primary);
}

[data-theme="dark"] .info-container {
float: left;
    width: 362px;
    color: #c0c0c0;
    background-color: var(--bg-card);
    box-shadow: 0 0 10px rgba(115, 115, 115, .5);
    -moz-box-shadow: 0 0 10px rgba(115, 115, 115, .5);
    margin: 15px 5px 0 5px;
    box-sizing: border-box;
    overflow: hidden;
    padding-bottom: 10px;
    transition: ease-in-out 0.3s;
}

[data-theme="dark"] .info-container:hover {
box-shadow: 0 0 10px rgba(115, 115, 115, .5);
    -moz-box-shadow: 0 0 10px rgba(115, 115, 115, .5);
    color: var(--text-link-hover);
}

[data-theme="dark"] .person-intro-title {
height: 40px;
    line-height: 40px;
    width: 82%;
    margin: 10px 9%;
    color: azure;
}

[data-theme="dark"] .person-intro-detail {
/*height: 30px;*/
    line-height: 30px;
    width: 82%;
    margin: 8px 9%;
    color: #c0c0c0;
}

[data-theme="dark"] .choosen-box {
width:35px;
        height:32px;
        background-color:var(--bg-body);
        margin: 0 auto;
        padding-right: 5px;
        padding-left: 5px;
        float:left;
        text-align:center;
        font-size:20px;
        border-radius: 4px;
        box-shadow: 0 0 10px rgba(115, 115, 115, .5);
        -moz-box-shadow: 0 0 10px rgba(115, 115, 115, .5);
        overflow: hidden;
        transition: all 0.6s;
}

[data-theme="dark"] .article-box:hover {
box-shadow: 0 0 10px rgba(115, 115, 115, .5);
    transform: scale(1.02);
}

[data-theme="dark"] .choosen-box:hover {
box-shadow: 0 0 10px rgba(115, 115, 115, .5);
        transform: scale(1.15);
}

[data-theme="dark"] .empty-box .tip {
width: 100%;
    height: 50px;
    line-height: 50px;
    font-size: 18px;
    margin-top: 10px;
    color: #c0c0c0;
}

[data-theme="dark"] .column-container:hover {
box-shadow: 0 0 10px rgba(115, 115, 115, .5);
    -moz-box-shadow: 0 0 10px rgba(115, 115, 115, .5);
}

[data-theme="dark"] .column-container-wider:hover {
box-shadow: 0 0 10px rgba(115, 115, 115, .5);
    -moz-box-shadow: 0 0 10px rgba(115, 115, 115, .5);
}

[data-theme="dark"] .column_box {
width: 100%;
    padding: 12px 16px;
    background-color: var(--bg-card);
    border-radius: 10px;
    overflow: hidden;
}

[data-theme="dark"] .column_box .column-category a {
width: 86%;
    padding: 0 7%;
    height: 100%;
    float: left;
    color: #c0c0c0;
    transition: border-left-width 0.3s ease-in-out;
    /*单行文本溢出显示省略号*/
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
}

[data-theme="dark"] .column_box .column-category a:hover {
color: var(--text-link);
    border-left: var(--text-link-hover) solid 3px;
    background-color: var(--bg-card);
}

[data-theme="dark"] .card__side--back-6 {
background: #222;
}
/* ... */

